--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ondev.crypto">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".CoinApplication"
         android:allowBackup="true"
@@ -14,7 +15,7 @@
             android:name=".presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Criptomonedas.NoActionBar">
+            android:theme="@style/Theme.Criptomonedas">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
