--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,8 +65,8 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
     // Compose dependencies
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0-beta01"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
     implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
 
     // Coroutines
